// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > analysis clearIsochroneResults should work 1`] = `
Object {
  "type": "clear isochrone results",
}
`;

exports[`actions > analysis enterAnalysisMode should work 1`] = `
Object {
  "type": "enter analysis mode",
}
`;

exports[`actions > analysis exitAnalysisMode should work 1`] = `
Object {
  "type": "exit analysis mode",
}
`;

exports[`actions > analysis setActiveVariant should work 1`] = `
Object {
  "type": "set active variant",
}
`;

exports[`actions > analysis setComparisonInProgress should work 1`] = `
Object {
  "type": "set comparison in progress",
}
`;

exports[`actions > analysis setComparisonModifications should work 1`] = `
Object {
  "type": "set comparison modifications",
}
`;

exports[`actions > analysis setComparisonScenario should work 1`] = `
Object {
  "payload": Object {
    "bundleId": "BUNDLE ID",
    "id": "COMPARISON_ID",
    "variantIndex": 1,
  },
  "type": "set comparison scenario",
}
`;

exports[`actions > analysis setComparisonScenario should work 2`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > analysis setComparisonScenario should work 3`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > analysis setComparisonScenario should work 4`] = `
Object {
  "payload": Object {
    "bundleId": "BUNDLE ID",
    "id": "COMPARISON_ID",
    "modifications": Array [
      Object {
        "name": "MODIFICATION",
        "variants": Array [
          false,
          true,
        ],
      },
    ],
    "variantIndex": 1,
  },
  "type": "set comparison modifications",
}
`;

exports[`actions > analysis setComparisonScenarioId should work 1`] = `
Object {
  "type": "set comparison scenario",
}
`;

exports[`actions > analysis setCurrentIndicator should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/grid/undefined/undefined?redirect=false",
  },
  "type": "fetch",
}
`;

exports[`actions > analysis setIsochroneCutoff should work 1`] = `
Object {
  "type": "set isochrone cutoff",
}
`;

exports[`actions > analysis setIsochroneFetchStatus should work 1`] = `
Object {
  "type": "set isochrone fetch status",
}
`;

exports[`actions > analysis setIsochroneLonLat should work 1`] = `
Object {
  "payload": Object {
    "lat": 12,
    "lon": 34,
  },
  "type": "set isochrone lonlat",
}
`;

exports[`actions > analysis setIsochroneResults should work 1`] = `
Object {
  "type": "set isochrone results",
}
`;

exports[`actions > analysis setProfileRequest should work 1`] = `
Object {
  "payload": Object {
    "maxWalkTime": 20,
  },
  "type": "set profile request",
}
`;

exports[`actions > analysis setScenarioApplicationErrors should work 1`] = `
Object {
  "payload": Array [
    Object {
      "messages": Array [
        "Headway is not greater than zero.",
      ],
      "modificationId": "Add Trip Pattern",
      "title": "Error while applying the modification entitled 'Add Trip Pattern'.",
    },
  ],
  "type": "set scenario application errors",
}
`;
